# group11112025

./: README.md  octopus.txt
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py  work_with_async.py  work_with_async2.py  work_with_multiproc.py  work_with_threads.py
revision/: pyproject.toml
revision/app/: .env-example  base64  config.py  conftest.py  dec_trash.py  hw_example_decor.py  logger.py  main.py  rabbit_consumer.py  rabbit_publisher.py  redis_publisher.py  redis_service.py  redis_subscriber.py  unpacking.py
revision/app/base_64/: base_64.py
revision/app/database/: database_practice.py
revision/app/oop/: models.py
revision/app/revision/: utils.py
revision/app/s3_practice/: work_with_binary_files.py
revision/app/tests/: test_models.py  test_models2.py  test_utils.py
revision/app/work_with_jwt/: work_with_jwt.py
