[project]
name = "revision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.13",
    "django>=5.2.8",
    "logtail-python>=0.3.4",
    "psycopg[binary]>=3.3.2",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
]
